
# Header files that I wish to install in $(prefix)/include
include_HEADERS =						\
	$(top_srcdir)/src/include/h5core/h5_attach.h		\
	$(top_srcdir)/src/include/h5core/h5_attribs.h		\
	$(top_srcdir)/src/include/h5core/h5_core.h		\
	$(top_srcdir)/src/include/h5core/h5_errno.h		\
	$(top_srcdir)/src/include/h5core/h5_errorhandling.h	\
	$(top_srcdir)/src/include/h5core/h5_hdf5.h		\
	$(top_srcdir)/src/include/h5core/h5_maps.h		\
	$(top_srcdir)/src/include/h5core/h5_openclose.h	\
	$(top_srcdir)/src/include/h5core/h5_readwrite.h	\
	$(top_srcdir)/src/include/h5core/h5_syscall.h		\
	$(top_srcdir)/src/include/h5core/h5_types.h		\
	$(top_srcdir)/src/include/h5core/h5b_attribs.h		\
	$(top_srcdir)/src/include/h5core/h5b_model.h		\
	$(top_srcdir)/src/include/h5core/h5b_readwrite.h	\
	$(top_srcdir)/src/include/h5core/h5t_adjacencies.h	\
	$(top_srcdir)/src/include/h5core/h5t_core.h		\
	$(top_srcdir)/src/include/h5core/h5t_inquiry.h		\
	$(top_srcdir)/src/include/h5core/h5t_map.h		\
	$(top_srcdir)/src/include/h5core/h5t_model.h		\
	$(top_srcdir)/src/include/h5core/h5t_readwrite.h	\
	$(top_srcdir)/src/include/h5core/h5t_ref_elements.h	\
	$(top_srcdir)/src/include/h5core/h5t_retrieve.h	\
	$(top_srcdir)/src/include/h5core/h5t_storemesh.h	\
	$(top_srcdir)/src/include/h5core/h5t_tags.h		\
	$(top_srcdir)/src/include/h5core/h5u_model.h		\
	$(top_srcdir)/src/include/h5core/h5u_readwrite.h

# Listing of all possible headers that I may include
EXTRA_HEADERS =

EXTRA_DIST = Makefile.in

clean-local:
	$(RM) *~
	$(RM) h5core/*~
