otherincludedir = $(includedir)/h5core

otherinclude_HEADERS =		\
	h5_attach.h		\
	h5_attribs.h		\
	h5_core.h		\
	h5_errno.h		\
	h5_errorhandling.h	\
	h5_hdf5.h		\
	h5_maps.h		\
	h5_openclose.h		\
	h5_readwrite.h		\
	h5_syscall.h		\
	h5_types.h		\
	h5b_attribs.h		\
	h5b_model.h		\
	h5b_readwrite.h		\
	h5t_adjacencies.h	\
	h5t_core.h		\
	h5t_inquiry.h		\
	h5t_map.h		\
	h5t_model.h		\
	h5t_readwrite.h		\
	h5t_ref_elements.h	\
	h5t_retrieve.h		\
	h5t_storemesh.h		\
	h5t_tags.h		\
	h5u_model.h		\
	h5u_readwrite.h

EXTRA_HEADERS =

EXTRA_DIST =

clean-local:
	$(RM) *~
	$(RM) h5core/*~
